public/assets/stylesheets/style.css
/* ... */
.cron-task .parameter.required {
  font-weight: bold;
}
.cron-task .parameter label {
  padding: 0;
}
.cron-task tbody:last-child .parameters {
  border-bottom: 1px solid #888;
  -webkit-border-bottom-right-radius: 3px;
  -moz-border-radius-bottomright: 3px;
  border-bottom-right-radius: 3px;
  -webkit-border-bottom-left-radius: 3px;
  -moz-border-radius-bottomleft: 3px;
  border-bottom-left-radius: 3px;
}
.cronjob-filters {
  margin-bottom: 1em;
}
.cronjob-filters label {
  display: block;
  font-weight: bold;
}
.cronjob-filters select {
  width: 100%;
}
.cronjob-filters thead th {
  text-align: right;
}
.cronjob-filters thead th:first-child {
  text-align: left;
}
.cronjob-filters tfoot td {
  text-align: center;
}
.crontab,
.crontab li {
  list-style: none;
  margin: 0;
  padding: 0;
}
.crontab li {
  display: inline-block;
  padding-right: 5px;
  text-align: center;
}
.crontab span {
  display: block;
  text-align: right;
}
.inactivatible td {
  color: #888;
}
.cronjobs-edit h1 {
  margin: 0 0 0.5em;
}
.cronjobs-edit > table > thead > tr > th {
  background-color: #899bba;
  border-color: #1f4171;
  border-style: solid;
  border-width: 0 0 1px 0;
  color: #FFFFFF;
  font-size: 12pt;
  padding: 3px 5px;
}
.cronjobs-edit > table > thead > tr > th img,
.cronjobs-edit > table > thead > tr > th svg {
  vertical-align: middle;
}
.cronjobs-edit > table {
  margin-bottom: 1em;
}
.cronjobs-edit td {
  vertical-align: top;
}
.cron-schedule tbody tr td label {
  display: inline;
  font-weight: normal;
  white-space: nowrap;
}
.cron-item input[type=number] {
  width: 2em;
}
.documents .chdir-up a {
  display: block;
}
.documents .document-icon,
.documents .empty {
  text-align: center;
}
.documents .options {
  text-align: right;
}
.documents .bread-crumbs {
  display: inline-block;
  min-height: 1.5em;
  width: 40px;
  z-index: 1;
}
.documents .bread-crumbs > a,
.documents .bread-crumbs ul {
  background-color: #fff;
  padding: 5px;
}
.documents .bread-crumbs > a {
  padding-bottom: 2px;
}
.documents .bread-crumbs.extendable:hover > a,
.documents .bread-crumbs.extendable:hover > ul {
  box-shadow: 0 4px 3px #aaa;
}
.documents .bread-crumbs.extendable:hover ul {
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-box-flex;
  display: -webkit-flex;
  display: -moz-box;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  -moz-box-direction: reverse;
  -moz-box-orient: vertical;
  -webkit-box-orient: vertical;
  flex-direction: column-reverse;
}
.documents .bread-crumbs ul {
  display: none;
  list-style: none;
  margin: 0;
  position: absolute;
}
.documents .bread-crumbs li {
  font-size: 0.85em;
  line-height: 1.5em;
}
.documents .bread-crumbs li a {
  background-image: url("../images/icons/blue/folder-parent.svg");
  -webkit-background-size: 24px 24px;
  -moz-background-size: 24px 24px;
  -o-background-size: 24px 24px;
  background-size: 24px 24px;
  background-position: left center;
  background-repeat: no-repeat;
  padding-left: 30px;
}
.documents .bread-crumbs li:first-child a {
  background-image: url("../images/icons/blue/folder-empty.svg");
  -webkit-background-size: 24px 24px;
  -moz-background-size: 24px 24px;
  -o-background-size: 24px 24px;
  background-size: 24px 24px;
}
.document-dialog {
  *zoom: 1;
}
.document-dialog:before,
.document-dialog:after {
  display: table;
  content: "";
  line-height: 0;
}
.document-dialog:after {
  clear: both;
}
.document-dialog > aside {
  float: left;
  width: 150px;
}
.document-dialog .document-dialog-icon {
  text-align: center;
}
.document-dialog > div {
  border-left: 1px dashed #888;
  margin-left: 150px;
  min-height: 100%;
  max-height: 100%;
  overflow-y: auto;
}
.document-dialog dl dt:after {
  content: ':';
}
.document-dialog dl dd {
  margin: 0 0 0.5em 0.5em;
  padding: 0;
}
.document-dialog dl dd:last-child {
  margin-bottom: 0;
}
.documents.dragging [data-file]:not([data-folder]) {
  background-color: #c5c7ca;
  opacity: 0.6;
}
.documents [data-folder].dropping {
  background-color: #ef9999;
}
.document-draggable-helper {
  background-color: #ffe5ad !important;
  opacity: 1 !important;
}
.document-draggable-helper td {
  border-bottom: 0 !important;
}
fieldset.document-admin-search label {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  display: inline-block;
  width: 49%;
}
.themen_list,
.dozenten_list {
  margin: 0px;
  padding: 0px;
  list-style-type: none;
}
.themen_list > * {
  background-color: #e7ebf1;
  margin: 2px;
}
table.dates {
  width: calc(100% - 4px);
}
table.dates .themen_list > * {
  background-color: transparent;
}
table.dates .ausfall {
  opacity: 0.5;
}
table.dates .nextdate {
  background-color: #d0d7e3;
}
table.dates .topic-droppable.active {
  background-color: #ffe5ad;
}
table.dates .topic-droppable.hovered {
  background-color: #ffca5c;
}
table.dates .draggable-topic-handle {
  cursor: move;
  background: transparent url("../images/anfasser_24.png") 3px center no-repeat;
  padding-left: 12px;
}
.file_uploader {
  display: none;
}
.uploadbar {
  padding: 10px;
  background-image: linear-gradient(#28497c, #28497c);
  background-size: 0% 100%;
  background-repeat: no-repeat;
  border: #28497c solid 1px;
}
.subfolders .empty {
  display: none;
}
.subfolders .empty:only-child {
  display: table-row;
}
/* for file/edit view and file/new_edit_folder_form view: */
div.file_select_possibilities,
.folder_type_select_possibilities {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: stretch;
  /* for file/edit view only: */
  /* for file/new_edit_folder_form view only: */
}
/* ... */

